--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,8 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Mingalaba</h1>
+      <h1>Debugging Mysteries of Sherlock Holmes</h1>
+      <img src="/assets/sherlock2.png" style="vertical-align:middle" width=75% height=100% alt="">
       <a
         target="_blank"
         href="/rss.xml"
@@ -41,19 +42,10 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
-      </p>
-      <p>
-        Read the blog posts or check
-        <LinkButton
-          className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href="https://github.com/satnaing/astro-paper#readme"
-        >
-          README
-        </LinkButton> for more info.
+        Holmes and Watson taking only the most interesting cases but also perhaps
+        the ones that would be most hazardous to their sanity.
+
+        How can they fare against the dangers of the NT world?
       </p>
       {
         // only display if at least one social link is enabled
